--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
         <div class="gutter-outside">
           <div style="opacity:0" class="stage-copy-inner">
             <div class="stage-copy-title-wrapper">
-              <h1 class="title1"><strong>SVE Travels</strong></h1>
+              <h1 class="title1"><strong>Bengaluru Airport Taxi</strong></h1>
             </div>
             <p class="title4 text-regular text-grey"><strong>On Time, Every Time</strong></p>
-            <div class="p-xxxs-start p-xxxs-end">Experience stress-free travel with Sree Vinayaga Travels. Our skilled drivers and modern fleet guarantee safe and punctual arrivals. Transparent pricing, 24/7 availability, and your journey as our top priority.</div>
+            <div class="p-xxxs-start p-xxxs-end">Our skilled drivers and modern fleet guarantee safe and punctual arrivals. Transparent pricing, 24/7 availability, and your journey as our top priority.</div>
             <div class="p-xs-start">
               <a href="#form" class="button small w-button">Book Your Ride Now</a>
             </div>
